--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icon": "^1.0.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "tailwind-scrollbar": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
