--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "core-js": "^3.25.0",
+    "firebase": "^9.9.4",
     "next": "12.2.5",
     "next-i18next": "^12.0.1",
     "react": "18.2.0",
