--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "base64url": "^3.0.1",
     "core-js": "^3.25.0",
     "firebase": "^9.9.4",
+    "framer-motion": "^7.6.1",
     "next": "12.2.5",
     "next-i18next": "^12.0.1",
     "react": "18.2.0",
