--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "core-js": "^3.25.0",
     "firebase": "^9.9.4",
     "framer-motion": "^7.6.1",
-    "next": "12.2.5",
+    "next": "^13.0.0",
     "next-i18next": "^12.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
     "tailwind-scrollbar": "^2.0.1",
@@ -30,7 +30,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.2"
