finished editor text to comments

--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "and": "^0.0.3",
     "base64url": "^3.0.1",
     "core-js": "^3.25.0",
+    "escape-html": "^1.0.3",
     "firebase": "^9.9.4",
     "framer-motion": "^7.6.1",
+    "is-hotkey": "^0.2.0",
+    "is-url": "^1.2.4",
     "next": "^13.0.0",
     "next-i18next": "^12.0.1",
     "react": "^18.2.0",
@@ -30,6 +33,8 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/escape-html": "^1.0.2",
+    "@types/is-url": "^1.2.30",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
