--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^7.6.1",
     "is-hotkey": "^0.2.0",
     "is-url": "^1.2.4",
+    "nanoid": "^4.0.0",
     "next": "^13.0.0",
     "next-i18next": "^12.0.1",
     "react": "^18.2.0",
