added functios to comments and fixed some comment's design

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^13.0.0",
     "next-i18next": "^12.0.1",
     "react": "^18.2.0",
+    "react-beforeunload": "^2.5.3",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
@@ -38,6 +39,7 @@
     "@types/is-url": "^1.2.30",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
+    "@types/react-beforeunload": "^2.1.1",
     "@types/react-dom": "18.0.6",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "autoprefixer": "^10.4.8",
