Fixed sign-in users

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-tailwind/react": "^1.2.4",
     "@types/draft-js": "^0.11.9",
     "and": "^0.0.3",
+    "base-64": "^1.0.0",
     "base64url": "^3.0.1",
     "core-js": "^3.25.0",
     "dotenv": "^16.0.3",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/base-64": "^1.0.0",
     "@types/escape-html": "^1.0.2",
     "@types/is-url": "^1.2.30",
     "@types/node": "18.7.14",
